--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "next": "16.0.3",
     "postcss": "^8.5.6",
     "react": "19.2.0",
